--- a/styles/style.css
+++ b/styles/style.css
@@ -1,31 +1,311 @@
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
+
+/* Селекторы блока header */
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+   display: flex;
+  position: relative;
+  background-color: #f2f2f2;
+  align-items: center;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  background-color: #2f80ed;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.header__main-illustration {
+  position: absolute;
+  width: 765px;
+  height: 608px;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+  background-size: cover;
+}
+
+.logo {
+  position: absolute;
+  background-repeat: no-repeat;
+  width: 183px;
+}
+
+.logo_place_header {
+  top: 30px;
+  left: 64px;
+  z-index: 1;
+  height: 32px;
+}
+
+.header__title {
+  display: flex;
+  position: relative;
+  width: 730px;
+  margin: 0;
+  left: 64px;
+  font-size: 102px;
+  font-weight: bold;
+  line-height: 96px;
+}
+
+.header__subtitle {
+  position: absolute;
+  width: 388px;
+  bottom: 30px;
+  left: 64px;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+.description {
+  margin-top: 100px;
+}
+
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__brief {
+  width: 175px;
+  color: #2f80ed;
+  font-weight: normal;
+  line-height: 1.2;
+  font-size: 18px;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  color: black;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
+}
+
+.two-columns__paragraph {
+  margin: 30px 0 0 0;
+}
+
+.two-columns__paragraph_nomargin {
+  margin: 0;
+}
+
+.two-columns__span-accent {
+  font-weight: bold;
+}
+
+/* Селекторы секции digits */
+
+.digits {
+  margin: 100px auto;
+}
+
+.section-title {
+  width: 60%;
+  font-size: 60px;
+  line-height: 69px;
+  font-weight: bold;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.section-subtitle {
+  width: 60%;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  text-align: center;
+  margin: 20px auto 0 auto;
+}
+
+.table {
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  justify-content: space-between;
+  margin: 0 auto;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__heading {
+  font-size: 24px;
+  line-height: 1.15;
+  font-weight: bold;
+}
+
+.table__text {
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+}
+
+/* Селекторы секции feynman */
+
+.feynman {
+  position: relative;
+  margin-top: 100px;
+  background-color: #f2f2f2;
+  align-items: center;
+  padding-top: 100px;
+}
+
+.feynman__title {
+  width: 648px;
+  font-size: 120px;
+  line-height: 1.15;
+  font-weight: bold;
+  text-align: center;
+  margin: auto;
+}
+
+.feynman__subtitle {
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  text-align: center;
+  margin: 70px auto 0 auto;
+}
+
+.feynman__link {
+  width: auto;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: bold;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  text-decoration: none;
+  color: black;
+}
+
+.feynman__photo {
+  position: absolute;
+  width: 867px;
+  height: 637px;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  background-size: cover;
+}
+
+/* Селекторы секции kaufman */
+
+.kaufman {
+  position: relative;
+  background-color: #1f1f1f;
+  padding: 90px 0;
+  overflow: hidden;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 1;
+}
+
+.table_theme_dark {
+  color: white;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  right: -210px;
+  top: 0;
+}
+
+/* Селекторы блока footer */
+
+.footer {
+  padding: 60px 0 40px 0;
+  background-color: #1f1f1f;
+  color: white;
+}
+
+.footer__columns {
+  display: flex;
+  position: relative;
+  width: 90%;
+  margin: 0 auto;
+  align-content: space-between;
+  justify-content: space-between;
+  min-height: 250px;
+}
+
+.footer__column {
+  position: relative;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+}
+
+.footer__column_content_info {
+  text-decoration: none;
+  color: white;
+}
+
+.footer__column_content_social {
+  text-decoration: none;
+  color: white;
+  margin-bottom: 10px;
+}
+
+.logo_place_footer {
+  height: 35px;
+}
+
+.footer__author {
+  margin: 18px 0;
+  position: absolute;
+  bottom: 0;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+}
+
+.footer__column-heading {
+  margin-bottom: 20px;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: bold;
+}
+
+.footer__column-links {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: normal;
+  text-decoration: none;
+}
+
+.footer__social-icon {
+  size: 16px 16px;
+  margin-right: 10px;
 }
