--- a/styles/style.css
+++ b/styles/style.css
@@ -236,6 +236,29 @@
   color: white;
 }
 
+.table__cell_theme_dark {
+  width: 200px;
+  margin-right: 0;
+  margin-top: 80px;
+  z-index: 1;
+}
+
+.section-title_theme_dark {
+  color: white;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+}
+
+.table__heading_theme_dark {
+  color: white;
+}
+
+.table__text_theme_dark {
+  color: white;
+}
+
 .kaufman__triangle {
   position: absolute;
   right: -210px;
