--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,7 @@
   bottom: 0;
   right: 0;
   z-index: 1;
-  background-size: cover;
+ /* background-size: cover;  исправлено по замечанию*/
 }
 
 .logo {
@@ -53,11 +53,12 @@
   display: flex;
   position: relative;
   width: 730px;
-  margin: 0;
-  left: 64px;
+  margin: 0 0 0 64px; /*поправлено*/
+  /*left: 64px; */
   font-size: 102px;
   font-weight: bold;
   line-height: 96px;
+  z-index: 2;
 }
 
 .header__subtitle {
@@ -67,11 +68,14 @@
   left: 64px;
   font-size: 18px;
   line-height: 25px;
+  z-index: 2;
+  margin: 0;
 }
 
 .header__link {
   color: #2f80ed;
   text-decoration: none;
+  margin: 0;
 }
 
 .description {
@@ -107,9 +111,14 @@
   margin: 30px 0 0 0;
 }
 
+.two-columns__paragraph:first-of-type {
+  margin-top: 0;
+}
+/*
 .two-columns__paragraph_nomargin {
   margin: 0;
 }
+*/
 
 .two-columns__span-accent {
   font-weight: bold;
@@ -146,6 +155,8 @@
   align-content: space-between;
   justify-content: space-between;
   margin: 0 auto;
+  padding: 0;
+  list-style-type: none;
 }
 
 .table__cell {
@@ -154,12 +165,14 @@
 }
 
 .table__heading {
+  margin: 0 0 20px 0; /*добавил*/
   font-size: 24px;
   line-height: 1.15;
   font-weight: bold;
 }
 
 .table__text {
+  margin: 0 0 20px 0; /*добавил*/
   font-size: 18px;
   line-height: 1.2;
   font-weight: normal;
@@ -170,7 +183,7 @@
 .feynman {
   position: relative;
   background-color: #f2f2f2;
-  height: 790px;
+  min-height: 790px; /*поправил*/
   padding-top: 100px;
 }
 
@@ -198,13 +211,14 @@
 .feynman__link {
   font-size: 36px;
   line-height: 51px;
-  font-weight: bold;
+  font-weight: normal; /*поправил*/
   text-align: center;
   position: absolute;
   top: 50%;
   right: 48px;
   text-decoration: none;
   color: black;
+  z-index: 2; /*добавил*/
 }
 
 .feynman__photo {
@@ -212,6 +226,7 @@
   width: 867px;
   height: 637px;
   bottom: 0;
+  left: 0; /*поправил*/
   background-size: cover;
 }
 
@@ -254,8 +269,12 @@
 
 .kaufman__triangle {
   position: absolute;
+  width: 877px;
+  height: 877px;
   right: -210px;
   top: 0;
+  background-image: url(../images/kaufman-triangle.svg); /*сделал рисунок фоновым*/
+  background-size: cover;
 }
 
 /* Селекторы блока footer */
@@ -289,7 +308,6 @@
 .footer__column_content_info {
   text-decoration: none;
   color: white;
-
 }
 
 .footer__column_content_social {
@@ -323,6 +341,13 @@
   line-height: 30px;
   font-weight: normal;
   margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.footer__link {
+  color: white;
+  text-decoration: none;
 }
 
 .footer__social-icon {
