--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,5 @@
 @import url(./__columns/footer__columns.css);
+@import url(../logo/_place/logo_place_footer.css);
 @import url(./__author/footer__author.css);
 @import url(./__link/footer__link.css);
 @import url(./__column/footer__column.css);
