--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,7 @@
 @import url(./__title/header__title.css);
 @import url(./__subtitle/header__subtitle.css);
+@import url(../logo/logo.css);
+@import url(../logo/_place/logo_place_header.css);
 @import url(./__square-pic/header__square-pic.css);
 @import url(./__main-illustration/header__main-illustration.css);
 @import url(./__link/header__link.css);
@@ -12,4 +14,5 @@
   position: relative;
   background-color: #f2f2f2;
   align-items: center;
+  overflow: hidden;
 }
