--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -4,6 +4,6 @@
   height: 877px;
   right: -210px;
   top: 0;
-  background-image: url(../images/kaufman-triangle.svg); /*сделал рисунок фоновым*/
+  background-image: url(../../../images/kaufman-triangle.svg); /*сделал рисунок фоновым*/
   background-size: cover;
 }
