--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,12 +1,8 @@
-@import url(../__title/cards__title.css);
-@import url(../__image/cards__image.css);
-@import url(../__description/cards__description.css);
-
 .cards__item {
   margin-right: 100px;
   width: 240px;
 }
 
-.cards__item:nth-of-type(3) {
+.cards__item:nth-of-type(3n) {
   margin-right: 0;
 }
