--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -6,6 +6,5 @@
 .feynman {
   position: relative;
   background-color: #f2f2f2;
-  min-height: 790px; /*поправил*/
-  padding-top: 100px;
+  min-height: 790px;
 }
