--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,7 +1,7 @@
 .header__title {
   display: flex;
   position: relative;
-  width: 730px;
+  max-width: 730px;
   margin: 0 0 0 64px; /*поправлено*/
   font-size: 102px;
   font-weight: bold;
