--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,7 +1,5 @@
-@import url(../__logo/resources__logo.css);
-
 .resources__logo-zone {
-  width: 1100px;
+  max-width: 1100px;
   display: flex;
   margin: 80px auto 217px;
 }
