--- a/blocks/resources/__logo/resources__logo.css
+++ b/blocks/resources/__logo/resources__logo.css
@@ -1,4 +1,10 @@
 .resources__logo {
   width: 270px;
   height: 38px;
+  list-style-type: none;
+}
+
+.resources__logo:hover {
+  opacity: 0.5;
+  transition: opacity .4s linear;
 }
